# pythonP

./: .gitignore  Makefile  pyproject.toml  requirements.txt
brain_tasks/scripts/: s_checkio_sort_by_ext.py  s_decorators.py  s_examples.py  s_find_where.py  s_intervals.py  s_longest_length.py  s_reduce.py  s_sound.py
brain_tasks/tasks/: decorators.py  design_door_mat.py  examples.py  fast_sort.py  find_where.py  hackerrank_list.py  hexlet_fs.py  intervals.py  longest_length.py  rangoli.py  reduce.py  rhomb.py  sound.py
tests/: test_longest_length.py  test_stack.py
