[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Elena Donyakina <hellengoll@gmail.com>"]
readme = "README.md"
packages = [{ include = "brain_tasks" }]


[tool.poetry.dependencies]
python = "^3.10"
pyttsx3 = "^2.90"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
longest-lenght = "brain_tasks.scripts.s_longest_lenght:main"
examples = "brain_tasks.scripts.s_examples:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
